static/css/base.css
html {
    height: 100%;
}

.page-banner{
  padding: 2rem;
  background-color: #FFD700;;
  color: black;
}

/* -------------------------------- Navbar */
.logo-font {
    font-family: 'Fredoka One', cursive;
    font-size: 40px; 
}

.navbar-font {
    font-family: 'Lato';
    font-size: 20px;
}

.fa-paw {
    color: #FFD700;
}

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.main-logo-link {
    width: fit-content;
}

.text-white {
    color: white !important;
}

.bg-black {
    background: #000 !important;
}

.navbar, #topnav {
    background-color: #006994; 
}

.navbar {
  flex-wrap: nowrap;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

a.type-badge > span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.navbar-nav > li{
  padding-left:20px;
  padding-right:20px;
}

.navbar-toggler-icon {
  color: white;
}

.toggler-icon {
  border: none;
}

/* -------------------------------- Footer */
#footer {
    background-color: #006994;
}

footer li {
    list-style: none;
  }

footer ul {
    padding: 0;
    margin: 0;
  }
  
.footer-item {
    color: white;
    -webkit-transition: 0.3s all ease-in-out 0.2s;
    transition: 0.3s all ease-in-out 0.2s;
    text-decoration: none;
  }
  
.footer-item:hover {
    color: white;
    text-decoration: underline;
  }

.footer-item a {
    color: white;
    -webkit-transition: 0.3s all ease-in-out 0.2s;
    transition: 0.3s all ease-in-out 0.2s;
    text-decoration: none;
  }
  
.footer-item a:hover {
    color: white;
    text-decoration: underline;
  }

.footer-link {
  display: inline-block;
}

#footer h2.logo-font {
  font-size: 30px;
}

/* -------------------------------- Styling for home page */

.delivery-font {
    font-size: 14px;
    margin: 10px;
}

#delivery-banner {
    background-color: #f1f1f1;
}
  
.carousel-image {
    height: 100%;
    background-repeat: no-repeat;
    background-size: 100% 100%;
  }

.img-responsive {
    display: block;
    max-width: 100%;
    height: auto;
  }

.btn.home-button {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    background-color: #FFD700;
    font-family: 'Fredoka One', cursive;
    font-size: 25px;
    align-content: center;

}

.btn.home-button:hover {
  background-color: #FFD700;
  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
}

.showme {
  display: none;
  font-size: 18px;
}

.showhim:hover .showme {
  display: block;
}

.shop-by-pet {
    font-family: 'Fredoka One', cursive;
    font-size: 50px;
}

.index-staples-image{
  overflow: hidden;
  width: 80%;
}

.index-staples-image img{
  transition: all 0.3s;
  width: 100%;
  height: auto;
  transform: scale(1);
}

.sale-banner{
  padding: 2rem;
  background-color: #d80000;
  color: white;
}

.target{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
}

/* -------------------------------- Product page  */

.btn-blue-outline {
    border: 1px solid #006994;
    color: #006994;
    margin: 0.25rem;
    font-size: 0.8rem;
    padding: 0.25rem 0.5rem;
  }

.btn-blue-outline:hover {
    background-color: #006994;
    color: white;
    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
  }

/* -------------------------------- Product details page  */

.item-name {
    font-size: 20px;
}

.item-price {
    font-size: 20px;
    color: #d80000;
}

.item-sale-price {
    font-size: 22px;
    color: #00bfff;
}

.btn-blue {
  background: #00bfff;
  color: black !important; /* use important to override link colors for <a> elements */
  font-weight: bold;
  border-radius: 5px;
}

.btn-blue:hover,
.btn-blue:active,
.btn-blue:focus {
  background: #00bfff;
  color: black !important;
  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
}

.btn-yellow {
  background: #FFD700;
  color: black;
  font-weight: bold;
  border-radius: 5px;
}

.btn-yellow:hover,
.btn-yellow:active,
.btn-yellow:focus {
    background: #FFD700;
    color: black;
    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
}

.btn-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
  }

/* Style the tab */
.tab {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
  }
  
  /* Style the buttons that are used to open the tab content */
  .tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
  }
  
  /* Change background color of buttons on hover */
  .tab button:hover {
    background-color: #ddd;
  }
  
  /* Create an active/current tablink class */
  .tab button.active {
    background-color: #ccc;
  }
  
  /* Style the tab content */
  .descriptioncontent {
    display: inline;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
  }

   /* Style the review dropdown button */
  #review-options {
    color: #ccc;
  }

  #review-options:hover,
  #review-options:active,
  #review-options:focus {
    color: #FFD700;
  }

/* -------------------------------- Cart  */
  .update-link,
  .remove-item {
      cursor: pointer;
  }

  input[name='q']::placeholder {
      color: #aab7c4;
  }

/* -------------------------------- Checkout  */




/* ------------------------------- bootstrap toasts */

.message-container {
  position: fixed;
  top: 72px;
  right: 15px;
  z-index: 99999999999;
}

.custom-toast {
  overflow: visible;
}

.toast-capper {
  height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
  width: 0; 
  height: 0; 
  border-left: 4px solid transparent;
  border-right: 4px solid transparent; 
  border-bottom: 10px solid black;
  position: absolute;
  top: -10px;
  right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
  border-bottom-color: #007bff !important;
}

.arrow-secondary {
  border-bottom-color: #6c757d !important;
}

.arrow-success {
  border-bottom-color: #28a745 !important;
}

.arrow-danger {
  border-bottom-color: #dc3545 !important;
}

.arrow-warning {
  border-bottom-color: #ffc107 !important;
}

.arrow-info {
  border-bottom-color: #17a2b8 !important;
}

.arrow-light {
  border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
  border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
  height: 100px;
  overflow-x: hidden;
  overflow-y: auto;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }

  .home-carousel-item {
    height: 66vh;
    width: 100vw;
  }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
  margin-top: 1.5rem; /* mt-4 */
  color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
  border-color: none;
  border-radius: 5px;
}

.allauth-form-inner-content label:not([for='id_remember']) {
  display: none;
}

.allauth-form-inner-content input::placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
/* btn */
  display: inline-block;
  font-weight: bold;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: .375rem .75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 5px;


.allauth-form-inner-content a {
  color: #17a2b8; /* text-info */
}

/* Product Form */

.btn-file {
  position: relative;
  overflow: hidden;
}

.btn-file input[type="file"] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  opacity: 0;
  cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
  border-radius: 5px;
  border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
  background-color: #dc3545;
  border-color: #dc3545;
  border-radius: 5px;
}


@media (max-width: 991px) {
  .header-container {
      padding-top: 116px;
  }

  body {
      height: calc(100vh - 116px);
  }

  .display-4.logo-font.text-white {
      font-size: 2rem;
  }

  .nav-link {
      padding: 0.15rem;
  }

  .nav-link i.fa-lg {
      font-size: 1rem;
  }

  .navbar-toggler {
      padding: .6rem .6rem;
      font-size: 1rem;
  }

  .btn.btn-outline-black.rounded-0,
  .btn.btn-black.rounded-0 {
      padding: .375rem .375rem;
  }

  .btn.btn-outline-black.rounded-0.btn-lg,
  .btn.btn-black.rounded-0.btn-lg {
      padding: .375rem .375rem;
      font-size: .75rem;
  }

  .increment-qty, .decrement-qty {
      padding: .25rem .5rem !important;
  }
}

